syntax = "proto3";

package gitlab.ozon.dev.iTukaev.homework.api.models;
option go_package = "gitlab.ozon.dev/iTukaev/homework/pkg/api/models;models";

import "google/api/field_behavior.proto";


// User information.
message User {
    // User name. Unique field.
    string name = 1 [(google.api.field_behavior) = REQUIRED];

    // User password.
    string password = 2 [(google.api.field_behavior) = INPUT_ONLY, (google.api.field_behavior) = REQUIRED];

    // User's email address. Unique field.
    string email = 3 [(google.api.field_behavior) = REQUIRED];

    // User's full name.
    string full_name = 4 [(google.api.field_behavior) = REQUIRED];

    // User's creation time in UNIX format.
    int64 created_at = 5 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// User's short info.
message Profile {
    // User password.
    optional string password = 1;

    // User's email address. Unique field.
    optional string email = 2 [(google.api.field_behavior) = OPTIONAL];

    // User's full name.
    optional string full_name = 3 [(google.api.field_behavior) = OPTIONAL];
}